# game

./: CMakeLists.txt
src/: main.cpp
src/Core/: Application.cpp  Application.h  Window.cpp  Window.h
